# opd

lw1/abc/: abc.cpp
lw1/hello/: hello.cpp
lw1/square_equation/: square_equation.cpp
sfml.1/: CMakeLists.txt
sfml.1/02/: main.cpp
sfml.1/03/: main.cpp
sfml.1/FIO/: CMakeLists.txt  main.cpp
sfml.1/home/: CMakeLists.txt  main.cpp
sfml.2/: CMakeLists.txt
sfml.2/01/: main.cpp
sfml.2/02/: main.cpp
sfml.2/03/: main.cpp
sfml.2/sfml2.1/: main.cpp
sfml.2/sfml2.2/: main.cpp
sfml3/: CMakeLists.txt
sfml3/01/: main.cpp
sfml3/02/: main.cpp
sfml3/03/: main.cpp
sfml3/04/: main.cpp
sfml3/sfml3.1/: main.cpp
sfml3/sfml3.2/: main.cpp
workshop1/: CMakeLists.txt
workshop1/01/: main.cpp
workshop1/02/: main.cpp
workshop1/03/: main.cpp
